# mirknig-scraper

./: README.md  scraper.py
beautiful_soup/: pyproject.toml  scraper.py
fastapi/backend/app/: Makefile  main.py  pyproject.toml
fastapi/backend/app/templates/: mirknig_books.jinja
fastapi/frontend/: .gitignore  Makefile  index.html  package.json
fastapi/frontend/src/: App.svelte
fastapi/frontend/src/lib/: Books.svelte
rust/: Cargo.toml
rust/src/: main.rs
scrapy/: pyproject.toml  scrapy.cfg
scrapy/mirknig/: items.py  middlewares.py  pipelines.py  settings.py
scrapy/mirknig/spiders/: programming.py
