[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "requests>=2.27.1",
    "beautifulsoup4>=4.11.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
