[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Antti", email = "antti.linno@gmail.com"},
]
dependencies = [
    "fastapi>=0.78.0",
    "uvicorn[standard]>=0.18.2",
    "bs4>=0.0.1",
    "httpx>=0.23.0",
    "asyncio>=3.4.3",
    "jinja2>=3.1.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
